@@ -2,6 +2,7 @@
 2012-02-08  0.5
     * Add clicking spawner with spawn egg to change type (by default, ops only)
     * Add option to consume spawn egg when clicking spawner to change type
+    * Add silkspawners.changetypewithegg permission node
     * Compatibility with modded craftbukkits missing Material.MONSTER_EGG
     (craftableSpawners will be disabled, but otherwise everything should work,
     including spawn egg drops - please report any problems)
